syntax = "proto3";
package com.pokegoapi.main;

enum Method {
    METHOD_UNSET = 0;
    PLAYER_UPDATE = 1;
    GET_PLAYER = 2;
    GET_INVENTORY = 4;
    DOWNLOAD_SETTINGS = 5;
    DOWNLOAD_ITEM_TEMPLATES = 6;
    DOWNLOAD_REMOTE_CONFIG_VERSION = 7;
    FORT_SEARCH = 101;
    ENCOUNTER = 102;
    CATCH_POKEMON = 103;
    FORT_DETAILS = 104;
    ITEM_USE = 105;
    GET_MAP_OBJECTS = 106;
    FORT_DEPLOY_POKEMON = 110;
    FORT_RECALL_POKEMON = 111;
    RELEASE_POKEMON = 112;
    USE_ITEM_POTION = 113;
    USE_ITEM_CAPTURE = 114;
    USE_ITEM_FLEE = 115;
    USE_ITEM_REVIVE = 116;
    TRADE_SEARCH = 117;
    TRADE_OFFER = 118;
    TRADE_RESPONSE = 119;
    TRADE_RESULT = 120;
    GET_PLAYER_PROFILE = 121;
    GET_ITEM_PACK = 122;
    BUY_ITEM_PACK = 123;
    BUY_GEM_PACK = 124;
    EVOLVE_POKEMON = 125;
    GET_HATCHED_EGGS = 126;
    ENCOUNTER_TUTORIAL_COMPLETE = 127;
    LEVEL_UP_REWARDS = 128;
    CHECK_AWARDED_BADGES = 129;
    USE_ITEM_GYM = 133;
    GET_GYM_DETAILS = 134;
    START_GYM_BATTLE = 135;
    ATTACK_GYM = 136;
    RECYCLE_INVENTORY_ITEM = 137;
    COLLECT_DAILY_BONUS = 138;
    USE_ITEM_XP_BOOST = 139;
    USE_ITEM_EGG_INCUBATOR = 140;
    USE_INCENSE = 141;
    GET_INCENSE_POKEMON = 142;
    INCENSE_ENCOUNTER = 143;
    ADD_FORT_MODIFIER = 144;
    DISK_ENCOUNTER = 145;
    COLLECT_DAILY_DEFENDER_BONUS = 146;
    UPGRADE_POKEMON = 147;
    SET_FAVORITE_POKEMON = 148;
    NICKNAME_POKEMON = 149;
    EQUIP_BADGE = 150;
    SET_CONTACT_SETTINGS = 151;
    GET_ASSET_DIGEST = 300;
    GET_DOWNLOAD_URLS = 301;
    GET_SUGGESTED_CODENAMES = 401;
    CHECK_CODENAME_AVAILABLE = 402;
    CLAIM_CODENAME = 403;
    SET_AVATAR = 404;
    SET_PLAYER_TEAM = 405;
    MARK_TUTORIAL_COMPLETE = 406;
    LOAD_SPAWN_POINTS = 500;
    ECHO = 666;
    DEBUG_UPDATE_INVENTORY = 700;
    DEBUG_DELETE_PLAYER = 701;
    SFIDA_REGISTRATION = 800;
    SFIDA_ACTION_LOG = 801;
    SFIDA_CERTIFICATION = 802;
    SFIDA_UPDATE = 803;
    SFIDA_ACTION = 804;
    SFIDA_DOWSER = 805;
    SFIDA_CAPTURE = 806;
}

enum Direction {
    UNKNOWN = 0;
    RESPONSE = 1;
    REQUEST = 2;
}

message UnknownAuth {
    bytes start = 1;
    uint64 timestamp = 2;
    bytes end = 3;
}

message RequestEnvelop {
    Direction direction = 1;
    int64 rpc_id = 3;
    repeated Request requests = 4;
    Unknown6 unknown6 = 6;
    double latitude = 7;
    double longitude = 8;
    double altitude = 9;
    AuthInfo auth = 10;
    UnknownAuth unknownAuth = 11;
    int64 unknown12 = 12;


    message Unknown3 {
        string unknown4 = 1;
    }

    message Unknown6 {
        int32 unknown1 = 1;
        Unknown2 unknown2 = 2;

        message Unknown2 {
            bytes unknown1 = 1;
        }

    }
    message AuthInfo {
        string provider = 1;
        JWT token = 2;

        message JWT {
            string contents = 1;
            int32 unknown13 = 2;
        }
    }
}

message ResponseEnvelop {
    int32 unknown1 = 1;
    int64 unknown2 = 2;
    string api_url = 3;
    Unknown6 unknown6 = 6;
    UnknownAuth unknownAuth = 7;
    repeated Payload payload = 100;

    message Unknown6 {
        int32 unknown1 = 1;
        Unknown2 unknown2 = 2;

        message Unknown2 {
            bytes unknown1 = 1;
        }

    }
}

message Request {
    Method type = 1;
    bytes data = 2;
}

message Payload {
    int32 uknown = 1;
    bytes data = 2;
}
